--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- <input class="btn btn-primary" type="submit" onclick="showInput();"; value="Search"><br />  -->
 
     <br>
-
+<div id="time"></div>
 
     <!-- Label that displays the user's search criteria. -->
     <p><span id='display'></span></p>
