--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
             <script type='text/javascript' src='query.js'></script>
 
+            <title> The Chill Corner </title>
+
+            <meta name="viewport" content="width=device-width, height=device-height; initial-scale=1.0"> 
+
             <style>
 
                 .float_center {
